fix footer base spacing

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -210,7 +210,7 @@
         color: #fff
 
     .footer-subheader
-        font-size: 1.7rem
+        font-size: 2rem
         color: #fff
         margin-bottom: 2em
 
@@ -260,3 +260,6 @@
         display: block
         text-align: center
         margin-top: 15vh
+
+        span 
+            padding: 0 10px 
